<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_style">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/game_name"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@+id/game_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"/>


        <ImageView
            android:id="@+id/game_image"
            android:layout_width="300dp"
            android:layout_height="381dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/game_image"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/game_description_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_name"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/game_description_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/desctiprion_game_header"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/game_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_image" />

        <com.borjabravo.readmoretextview.ReadMoreTextView
            android:id="@+id/game_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/play_trial_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_description_txt"
            app:colorClickableText="@color/expandable"/>


        <Button
            android:id="@+id/play_trial_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttonshape"
            android:gravity="center"
            android:text="@string/play_trial_btn"
            app:layout_constraintBottom_toTopOf="@+id/play_gameplay_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/game_description">

        </Button>

        <Button
            android:id="@+id/play_gameplay_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/play_gameplay_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/play_trial_btn"
            app:layout_constraintBottom_toTopOf="@+id/review_layout"
            android:background="@drawable/buttonshape">

        </Button>

<LinearLayout
    android:id="@+id/review_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/play_gameplay_btn"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/game_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/review_game_header"
            android:textSize="20sp"
            android:layout_gravity="start"/>

    <TextView
        android:id="@+id/add_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:alpha="0.50"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/add_review_btn"
        android:layout_gravity="end">

    </TextView>

</LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_layout">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>